# comp_rep_study

./: .gitignore  LICENSE  README.md  pyproject.toml
comp-rep/: .flake8  .pre-commit-config.yaml  README.md  base_model_evaluation.py  cache_activations.py  cache_base_model_output.py  calculate_mean_ablation_values.py  composite_evaluation.py  evaluate.py  function_evaluation.py  mask_train.py  pyproject.toml  train.py  train_all_masks.sh  transform_and_save.py
comp-rep/circuit_evaluation/: calculate_global_sparsity.py  calculate_local_sparsity.py
comp-rep/circuit_evaluations/: calculate_global_sparsity.py  calculate_local_sparsity.py  circuit_overlap_evaluation.py  circuit_performance_evaluation.py  circuit_seed_comparison.py  combine_and_evaluate_circuits.py  plot_ablation_value_overlap.py  plot_performance_matrix.py  plot_task_overlap_confusion_matrix.py
comp-rep/comp_rep/: constants.py  dataset.py  evaluator.py  lightning_models.py  loss.py  mask_train.py  masked_lightning_models.py  model.py  predictions.csv  train.py  utils.py
comp-rep/comp_rep/callbacks/: eval_callbacks.py
comp-rep/example_runs/: train_base_model.sh  train_mask_model.sh
comp-rep/tests/: .test_dataset.py.swp  test_activation_pruner.py  test_cached_probabilities.py  test_dataset.py  test_faithfulness_score.py  test_masked_layers.py  test_subnetwork_metrics.py  test_subnetwork_set_fingerained_operations.py  test_subnetwork_set_operations.py
comp-rep/tracr_validation/: load_and_eval_tracr.py  nanoGPT.py  tracr_data_utils.py  tracr_model_utils.py  train_tracr_mask.py
data/: README.md  (+8 more)
(+51 files in other folders)
