[tool.poetry]
name = "comp-rep"
version = "0.1.0"
description = ""
authors = ["Sondre Wold <sondrewold1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
torch = "^2.3.0"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
