[tool.poetry]
name = "comp_rep"
version = "0.1.0"
description = ""
authors = ["Sondre Wold <sondrewold1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
torch = "^2.3.0"
flake8 = "^7.0.0"
pytest = "^8.2.1"
pre-commit = "^3.7.1"
tqdm = "^4.66.4"
lightning = "^2.3.0"
tensorboard = "^2.17.0"
wandb = "^0.17.3"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
